--- a/style.css
+++ b/style.css
@@ -1906,7 +1906,7 @@ input[type="file"]:focus {
 input:focus, textarea:focus {
   outline: none;
   border: 2px solid;
-  border-image-source: linear-gradient(24deg, #4E408A, #3498db, #1abc9c);
+  border-image-source: linear-gradient(24deg, #4E408A 10%, #3498db, #1abc9c);
   border-image-slice: 1;
   box-sizing: border-box;
   box-shadow: 0px 0px 40px -10px #DDDDDD; }
@@ -1921,9 +1921,9 @@ input[type="submit"] {
   transition: all 0.3s cubic-bezier(0.37, 1.06, 0.6, 0.97); }
 
 input[type="submit"]:hover {
-  background: linear-gradient(24deg, #4E408A, #3498db, #1abc9c);
+  background: linear-gradient(24deg, #4E408A 10%, #3498db, #1abc9c);
   color: white;
-  border-image-source: linear-gradient(24deg, #4E408A, #3498db, #1abc9c);
+  border-image-source: linear-gradient(24deg, #4E408A 10%, #3498db, #1abc9c);
   border-image-slice: 1; }
 
 .testimonials-container {
@@ -1947,7 +1947,7 @@ input[type="submit"]:hover {
       display: inline-block;
       content: "";
       border-top: 2px solid #fff;
-      width: 21%;
+      width: 20%;
       margin: 0 1rem;
       transform: translateY(-1rem);
       vertical-align: bottom; }
